...
                                    android:layout_marginTop="6dp"
                                    android:background="#1A7EA4FF"
                                    android:paddingStart="10dp"
                                    android:paddingTop="3dp"
                                    android:paddingEnd="10dp"
                                    android:paddingBottom="3dp"
                                    android:text="Theremin"
                                    android:textColor="#7EA4FF"
                                    android:textSize="11sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
...
